changed styling of card-content p, letter spacing and color. changed the look of the CardsList display of a card, name is no longer part of the link to the show page

--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -86,6 +86,11 @@
     margin-top: 40px;
 }
 
+.card .card-content p {
+    letter-spacing: 1px;
+    color: #313131;
+}
+
 /* .hidden {
     display: none;
 } */
